docs/sf-export/sfdx-raw/objects/Account_Status_Mapping__mdt/Account_Status_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Account Status Mapping</label>
    <pluralLabel>Account Status Mappings</pluralLabel>
</CustomObject>