docs/sf-export/sfdx-raw/objects/Account_Status_Mapping__mdt/fields/Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Status__c</fullName>
    <label>Client Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>