docs/sf-export/sfdx-raw/objects/Account_Status_Mapping__mdt/fields/Processor_Status__c.field-meta.xml
<CustomField>
    <fullName>Processor_Status__c</fullName>
    <label>Processor Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>