docs/sf-export/sfdx-raw/objects/Account_Status_Mapping__mdt/fields/SAS_Status_Lookup_Id__c.field-meta.xml
<CustomField>
    <fullName>SAS_Status_Lookup_Id__c</fullName>
    <label>SAS Status Lookup Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>